Reset main offset on fullscreen
Otherwise, if set to negative, this can lead to the navigation overlapping the chapter controls.

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -34,7 +34,7 @@
 }
 
 .main {
-  margin-top: var(--main-offset, 0);
+  margin-top: var(--main-offset, 0px);
   max-width: var(--site-width);
 
   // Allows for semi-transparent and clipped backgrounds without affecting the content
