--- a/src/scss/_icon-menu.scss
+++ b/src/scss/_icon-menu.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .icon-menu {
   display: flex;
   color: var(--navigation-color);
