--- a/src/scss/_paragraph-tools.scss
+++ b/src/scss/_paragraph-tools.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .paragraph-tools {
   user-select: none;
   position: absolute;
