--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -1,45 +1,46 @@
-@import '_reset';
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
 
-@import 'common/_functions';
-@import 'common/_mixins';
-@import 'common/_variables';
-@import 'common/_utility';
-@import 'common/_setup';
-@import 'common/_base';
-@import 'common/_inputs';
-@import 'common/_formatting';
-@import 'common/_blocks';
-@import 'common/_modals';
-@import 'common/_fullscreen';
-@import 'common/_icons';
-@import 'common/_settings';
-@import 'common/_tabs';
-@import 'common/_forms';
+@use '_reset';
 
-@import '_consent';
-@import '_header';
-@import '_icon-menu';
-@import '_footer';
-@import '_breadcrumbs';
-@import '_navigation';
-@import '_socialmedia';
-@import '_mobile-menu';
-@import '_login';
-@import '_follows';
-@import '_singular';
-@import '_cookies';
-@import '_pagination';
-@import '_statistics';
-@import '_card';
-@import '_post';
-@import '_profile';
-@import '_showcase';
-@import '_search';
-@import '_sidebar';
+@use 'common/_utility';
+@use 'common/_setup';
+@use 'common/_base';
+@use 'common/_inputs';
+@use 'common/_formatting';
+@use 'common/_blocks';
+@use 'common/_modals';
+@use 'common/_fullscreen';
+@use 'common/_icons';
+@use 'common/_settings';
+@use 'common/_tabs';
+@use 'common/_forms';
 
-@import '_notifications';
-@import '_lightbox';
+@use '_consent';
+@use '_header';
+@use '_icon-menu';
+@use '_footer';
+@use '_breadcrumbs';
+@use '_navigation';
+@use '_socialmedia';
+@use '_mobile-menu';
+@use '_login';
+@use '_follows';
+@use '_singular';
+@use '_cookies';
+@use '_pagination';
+@use '_statistics';
+@use '_card';
+@use '_post';
+@use '_profile';
+@use '_showcase';
+@use '_search';
+@use '_sidebar';
 
-@import '_browser-hacks';
-@import '_print';
-@import '_minimal';
+@use '_notifications';
+@use '_lightbox';
+
+@use '_browser-hacks';
+@use '_print';
+@use '_minimal';
