--- a/src/scss/collections.scss
+++ b/src/scss/collections.scss
@@ -1,6 +1,6 @@
-@import 'common/functions';
-@import 'common/mixins';
-@import 'common/variables';
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
 
 .collection {
   &__taxonomies {
