--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -1,3 +1,8 @@
+@use '_functions' as *;
+@use '_mixins' as *;
+@use '_variables' as *;
+@use '_base';
+
 // =============================================================================
 // GENERAL
 // =============================================================================
