--- a/src/scss/_chapter.scss
+++ b/src/scss/_chapter.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .chapter-font-color {
   color: var(--text-chapter);
 
