--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .header {
   position: relative;
   height: var(--header-height);
