--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .login {
   &__options {
     display: flex;
