--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .nav-observer {
   top: calc(-1px + var(--nav-observer-offset, 0px));
 }
