--- a/src/scss/_notifications.scss
+++ b/src/scss/_notifications.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .scrolling-up.is-inside-main {
   .notifications {
     top: 80px;
