--- a/src/scss/_pagination.scss
+++ b/src/scss/_pagination.scss
@@ -1,3 +1,8 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+@use 'common/_base';
+
 .pagination {
   display: flex;
   flex-wrap: wrap;
