--- a/src/scss/_post.scss
+++ b/src/scss/_post.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 :is(.blog-posts, .latest-posts) {
   .post {
     &:not(:first-child) {
