--- a/src/scss/_print.scss
+++ b/src/scss/_print.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 @media print {
   * {
     --font-weight-normal: 400;
