--- a/src/scss/_progress_bar.scss
+++ b/src/scss/_progress_bar.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 body:not(.hasProgressBar) {
   .progress {
     opacity: 0;
