--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .search-form[data-advanced="false"] {
   .search-form__advanced {
     display: none;
