--- a/src/scss/_singular.scss
+++ b/src/scss/_singular.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .singular {
   &__header {
     margin-bottom: 2rem;
