--- a/src/scss/_suggestions.scss
+++ b/src/scss/_suggestions.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .suggestions {
   &__wrapper {
     width: calc(100vw - 30px);
