--- a/src/scss/_tts.scss
+++ b/src/scss/_tts.scss
@@ -1,3 +1,7 @@
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+
 .tts-interface {
   position: fixed;
   inset: 0;
