--- a/src/scss/admin/settings.scss
+++ b/src/scss/admin/settings.scss
@@ -1,7 +1,7 @@
-@import '../common/functions';
-@import '../common/mixins';
-@import '../common/variables';
-@import '_properties';
+@use '../common/functions' as *;
+@use '../common/mixins' as *;
+@use '../common/variables' as *;
+@use '_properties';
 
 // ===============================================================================
 // NOTICES AND WP CONTENT
@@ -335,11 +335,170 @@ body[class*="fictioneer_page_"] {
     }
   }
 
-  // =============================================================================
-  // LAYOUT
-  // =============================================================================
+  // ===============================================================================
+  // HEADER
+  // ===============================================================================
 
-  @import '_header';
+  &__header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: var(--header-background-color);
+    padding: 20px 10px;
+    min-height: 256px;
+
+    @include bp(480px) {
+      padding: 20px 14px;
+    }
+
+    @include bp(768px) {
+      padding: 20px;
+    }
+
+    h1 {
+      color: var(--header-heading-color);
+      font-size: 64px;
+    }
+
+    &-links {
+      color: var(--header-note-color);
+      font-variant-numeric: tabular-nums;
+
+      a {
+        color: var(--header-note-color);
+        text-decoration: none;
+        white-space: nowrap;
+
+        &:hover {
+          color: var(--header-note-color-active);
+        }
+      }
+    }
+  }
+
+  // ===============================================================================
+  // NAVIGATION
+  // ===============================================================================
+
+  &__nav {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-top: 24px;
+
+    &-tab {
+      cursor: pointer;
+      display: grid;
+      place-content: center;
+      color: var(--header-nav-item-color);
+      font-size: 13px;
+      line-height: 1;
+      text-decoration: none;
+      padding: 0 16px;
+      margin: 0;
+      border-radius: 2px;
+      height: 32px;
+      transition: color .1s;
+
+      &:focus {
+        color: var(--header-nav-item-color);
+        box-shadow: none;
+        outline: none;
+      }
+
+      &:hover {
+        background: var(--header-nav-item-background-hover);
+        color: var(--header-nav-item-color-hover);
+      }
+
+      &.active {
+        background: var(--header-nav-item-background-active);
+        color: var(--header-nav-item-color-active);
+      }
+    }
+  }
+
+  // ===============================================================================
+  // SUB NAVIGATION
+  // ===============================================================================
+
+  &__subnav {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px 20px;
+    background: var(--subnav-background-color);
+    padding: 8px 20px 0;
+    margin: 0;
+
+    @include bp(375px) {
+      padding: 8px calc(16px + 10px) 0;
+    }
+
+    @include bp(480px) {
+      padding: 8px calc(16px + 14px) 0;
+    }
+
+    @include bp(768px) {
+      padding: 8px calc(16px + 20px) 0;
+    }
+
+    button {
+      cursor: pointer;
+      background: none;
+      color: var(--subnav-item-color);
+      padding: 8px 0 calc(5px + 8px);
+      border: none;
+
+      &:hover {
+        color: var(--subnav-item-color-hover);
+      }
+
+      &:focus {
+        box-shadow: none;
+        outline: none;
+      }
+    }
+
+    .dashicons-plus {
+      font-size: 16px;
+      height: 16px;
+      width: 16px;
+    }
+
+    &-tab {
+      cursor: pointer;
+      display: block;
+      color: var(--subnav-item-color);
+      font-size: 13px;
+      line-height: 1;
+      text-decoration: none;
+      padding: 8px 0 calc(5px + 8px);
+      border-bottom: 3px solid var(--subnav-item-border-color);
+      margin: 0;
+      transition: color .1s, border .1s;
+
+      &:focus {
+        color: var(--subnav-item-color);
+        box-shadow: none;
+        outline: none;
+      }
+
+      &:hover {
+        color: var(--subnav-item-color-hover);
+        border-bottom-color: var(--subnav-item-border-color-hover);
+      }
+
+      &.active {
+        color: var(--subnav-item-color-active);
+        font-weight: 600;
+        border-bottom-color: var(--subnav-item-border-color-active);
+      }
+    }
+  }
+
+  // =============================================================================
+  // CONTENT
+  // =============================================================================
 
   &__content {
     max-width: 1780px;
