--- a/src/scss/chapter.scss
+++ b/src/scss/chapter.scss
@@ -1,11 +1,11 @@
-@import 'common/_functions';
-@import 'common/_mixins';
-@import 'common/_variables';
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
 
-@import '_chapter';
-@import '_paragraph-tools';
-@import '_reader-settings';
-@import '_suggestions';
-@import '_progress_bar';
-@import '_tts';
-@import '_micro-menu';
+@use '_chapter';
+@use '_paragraph-tools';
+@use '_reader-settings';
+@use '_suggestions';
+@use '_progress_bar';
+@use '_tts';
+@use '_micro-menu';
