--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -1,6 +1,6 @@
-@import 'common/_functions';
-@import 'common/_mixins';
-@import 'common/_variables';
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
 
 .comment-section {
   --layout-link-color-hover: var(--comment-link-color-hover, var(--fg-300));
