--- a/src/scss/common/_settings.scss
+++ b/src/scss/common/_settings.scss
@@ -1,3 +1,7 @@
+@use '_functions' as *;
+@use '_mixins' as *;
+@use '_variables' as *;
+
 :root.no-background-textures body {
   .background-texture {
     background: {
