--- a/src/scss/customize/card-style-combined.scss
+++ b/src/scss/customize/card-style-combined.scss
@@ -1,5 +1,6 @@
-@import '../common/_functions';
-@import '../common/_mixins';
+@use '../common/_functions' as *;
+@use '../common/_mixins' as *;
+@use '../common/_variables' as *;
 
 :root, :root[data-theme=base] {
   --card-footer-rating-color: var(--fg-900);
