--- a/src/scss/customize/card-style-unfolded-combined.scss
+++ b/src/scss/customize/card-style-unfolded-combined.scss
@@ -1,5 +1,6 @@
-@import '../common/_functions';
-@import '../common/_mixins';
+@use '../common/_functions' as *;
+@use '../common/_mixins' as *;
+@use '../common/_variables' as *;
 
 :root[data-mode=light] {
   --card-footer-color: var(--fg-700);
