--- a/src/scss/customize/header-image-style-battered.scss
+++ b/src/scss/customize/header-image-style-battered.scss
@@ -1,5 +1,6 @@
-@import '../common/_functions';
-@import '../common/_mixins';
+@use '../common/_functions' as *;
+@use '../common/_mixins' as *;
+@use '../common/_variables' as *;
 
 :root.header-image-style-polygon-battered {
   --header-polygon: var(--polygon-battered-half);
