--- a/src/scss/customize/header-style-post-content.scss
+++ b/src/scss/customize/header-style-post-content.scss
@@ -1,3 +1,7 @@
+@use '../common/_functions' as *;
+@use '../common/_mixins' as *;
+@use '../common/_variables' as *;
+
 .post-content-header {
   flex: 1 1 100%;
   width: 100%;
