--- a/src/scss/customize/header-style-top-split.scss
+++ b/src/scss/customize/header-style-top-split.scss
@@ -1,5 +1,6 @@
-@import '../common/_functions';
-@import '../common/_mixins';
+@use '../common/_functions' as *;
+@use '../common/_mixins' as *;
+@use '../common/_variables' as *;
 
 .top-header {
   background: var(--top-header-background);
