--- a/src/scss/customize/header-style-wide.scss
+++ b/src/scss/customize/header-style-wide.scss
@@ -1,5 +1,6 @@
-@import '../common/_functions';
-@import '../common/_mixins';
+@use '../common/_functions' as *;
+@use '../common/_mixins' as *;
+@use '../common/_variables' as *;
 
 .main-navigation {
   margin: 0 auto;
