--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -1,7 +1,7 @@
-@import 'common/_functions';
-@import 'common/_mixins';
-@import 'common/_variables';
-@import 'common/_properties';
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
+@use 'common/_properties' as *;
 
 // Automatically becomes .editor-styles-wrapper
 body {
