--- a/src/scss/post-list.scss
+++ b/src/scss/post-list.scss
@@ -1,6 +1,6 @@
-@import 'common/_functions';
-@import 'common/_mixins';
-@import 'common/_variables';
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
 
 .post-list {
   display: flex;
