--- a/src/scss/taxonomies.scss
+++ b/src/scss/taxonomies.scss
@@ -1,5 +1,5 @@
-@import 'common/_functions';
-@import 'common/_mixins';
-@import 'common/_variables';
+@use 'common/_functions' as *;
+@use 'common/_mixins' as *;
+@use 'common/_variables' as *;
 
-@import '_tax-cloud';
+@use '_tax-cloud';
