--- a/src/scss/common/_setup.scss
+++ b/src/scss/common/_setup.scss
@@ -17,11 +17,11 @@ html:is(:root) {
   display: none !important;
 }
 
-body:where(:not(.user-is-tabbing)) :is(input, select, textarea):focus {
+body:where(:not(.user-is-tabbing)) :is(input, select, textarea, button, label, a):focus {
   outline: none;
 }
 
-body:where(.user-is-tabbing) :is(input, select, textarea):focus {
+input[type="checkbox"]:focus {
   outline-offset: 3px;
 }
 
