Aggregate styles for [hidden] and .hidden

--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -304,7 +304,7 @@ html:not(.logged-in) body.logged-in .hide-if-logged-in,
 html:not(.logged-in) body:not(.logged-in) .hide-if-logged-out,
 .mobile-menu .hide-in-mobile-menu,
 .site .hide-outside-mobile-menu,
-.hidden,
+.hidden, [hidden],
 .inside-epub {
   display: none !important;
   content-visibility: hidden;
