Optimize focus outline offset in navigation

--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -392,6 +392,10 @@
           transform: scale(1);
         }
       }
+
+      > :is(input, button, label, a) {
+        outline-offset: -2px;
+      }
     }
   }
 }
