Fix logo width in FF

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -28,7 +28,7 @@
   .custom-logo {
     height: var(--header-logo-height);
     max-height: calc(var(--header-height) - 2rem);
-    width: fit-content;
+    width: auto;
     max-width: 99vw;
     object-fit: contain;
     pointer-events: none; // Prevents drag and Edge image function nonsense
