--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -711,7 +711,7 @@ body {
   // LATEST COMMENTS
   // =============================================================================
 
-  .wp-block-latest-comments:where(:not(.no-theme-style)) {
+  .wp-block-latest-comments:is(:not(.no-theme-style)) {
     list-style: none;
     padding-left: 0 !important;
 
@@ -734,7 +734,7 @@ body {
 
     .wp-block-latest-comments__comment-avatar {
       float: left;
-      margin: 3px 8px 4px 0;
+      margin: 3px 8px 3px 0;
       border-radius: 2px;
       height: 32px;
       width: 32px;
