Update admin styles

--- a/src/scss/admin/settings.scss
+++ b/src/scss/admin/settings.scss
@@ -637,6 +637,8 @@ body[class*="fictioneer_page_"] {
       padding: 0 12px;
 
       p.inset-paragraph {
+        font-size: 12px;
+        line-height: 1.5;
         margin: 4px 0 0 24px;
       }
 
