Hide progress bar if outside main container

--- a/src/scss/_progress_bar.scss
+++ b/src/scss/_progress_bar.scss
@@ -2,7 +2,8 @@
 @use 'common/_mixins' as *;
 @use 'common/_variables' as *;
 
-body:not(.hasProgressBar) {
+body:not(.hasProgressBar),
+body:not(.is-inside-main) {
   .progress {
     opacity: 0;
   }
