Fix CSS property in metabox styles

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -733,7 +733,7 @@ td.fictioneer_patreon_lock_amount {
 
     &-lists {
       display: flex;
-      align-items: top;
+      align-items: flex-start;
     }
 
     &-values,
