--- a/src/scss/_reader-settings.scss
+++ b/src/scss/_reader-settings.scss
@@ -9,7 +9,6 @@
     display: flex;
     align-items: center;
     gap: 3px;
-    font-size: 14px;
   }
 
   .select-wrapper {
@@ -21,19 +20,15 @@
 
   .button {
     font-size: 16px;
-    padding: 0;
-    border-radius: 0;
+    padding: 0 0 0 2px;
+    border-radius: 0 var(--r, 0) var(--r, 0) 0;
     height: 26px;
     width: 26px;
     min-width: auto;
 
-    &--left {
-      padding-left: 2px;
-    }
-
     &--right {
-      border-radius: 0 var(--layout-border-radius-small) var(--layout-border-radius-small) 0;
-      padding-right: 2px;
+      --r: var(--layout-border-radius-small);
+      padding: 0 2px 0 0;
     }
   }
 
@@ -76,9 +71,8 @@
     border-radius: 50%;
     height: 26px;
     min-width: 26px;
-    transition: border-color var(--transition-duration),
-                background-color var(--transition-duration),
-                color var(--transition-duration);
+    transition: border-color, background, color;
+    transition-duration: var(--transition-duration);
 
     &:hover {
       color: var(--toggle-color-hover);
