--- a/src/scss/post-list.scss
+++ b/src/scss/post-list.scss
@@ -218,7 +218,7 @@
 }
 
 .elementor-element:has(.post-list) {
-  @media only screen and (max-width: 767.98px) {
+  @media only screen and (width < 768px) {
     width: 100%;
   }
 }
