Improve inclusion of comments template
This allows the .comment-section wrapper to be empty if the comment section is not loaded, so you can use the :empty selector on it.

--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -9,6 +9,10 @@
   blockquote a[href^="#paragraph-"] {
     border-bottom: none;
   }
+
+  &:empty {
+    display: none;
+  }
 }
 
 .comment-respond-option-toggle {
