--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -197,9 +197,11 @@
   --filter-reel-background: var(--bg-300);
   --filter-reel-background-active: var(--bg-700);
   --filter-reel-color: var(--fg-700);
-  --filter-reel-color-hover: var(--fg-500);
-  --filter-reel-color-active: var(--fg-inverted);
+  // --filter-reel-color-hover: var(--fg-500);
+  // --filter-reel-color-active: var(--fg-inverted);
   --filter-reel-text-shadow: none;
+  // --filter-reel-lightbox-hover-shadow: linear-gradient(to bottom, rgb(0 0 0 / 25%) 0%, transparent 100%);
+  // --filter-reel-filter-hover-shadow: linear-gradient(to top, rgb(0 0 0 / 15%) 0%, transparent 100%);
 
   // === PAGINATION ============================================================
 
